Fix tagline spacing some

--- a/_sass/home.sass
+++ b/_sass/home.sass
@@ -10,6 +10,7 @@
 	padding-bottom: 6px
 	margin-bottom: 0px
 	font-size: 26px
+	letter-spacing: 1px
 	color: $cream
 
 #home-welcome-block
